--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-	
+	<img src="profile-picture.jpg" alt="Sinan Rasheed" class="profile-picture">
   </body>
 </html>
