--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-	<img src="profile-picture.jpg" alt="Sinan Rasheed" class="profile-picture">
+    <div class="Top-Intro">
+      <img src="profile-picture.jpg" alt="Sinan Rasheed" class="profile-picture">
+      <main class="container">
+    <p>Hello 👋 I'm</p>
+    <section class="animation">
+      <div class="first"><div>Sinan Rasheed</div></div>
+      <div class="second"><div>Web Developer</div></div>
+      <div class="third"><div>Systems Engineer</div></div>
+    </section>
+  </main>
+</div>
+	
   </body>
 </html>
