--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <p>Hello 👋 I'm</p>
     <section class="animation">
       <div class="first"><div>Sinan Rasheed</div></div>
-      <div class="second"><div>Web Developer</div></div>
-      <div class="third"><div>Systems Engineer</div></div>
+      <div class="second"><div>Front-End Developer</div></div>
     </section>
   </main>
 </div>
