few animation words changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <section class="animation">
       <div class="first"><div>Sinan Rasheed</div></div>
       <div class="second"><div>Front-End Developer</div></div>
+      <div class="first"><div>Sinan Rasheed</div></div>
     </section>
   </main>
 </div>
